# aoc2024

./: .gitignore  aoc2024.cabal  flake.nix
1/: First.hs  HistorianHysteria.hs  Second.hs  flake.nix
2/: RedNosedReports.hs  flake.nix
3/: MultItOver.hs  flake.nix
Eight/: ResonantCollinearity.hs
Eighteen/: RAMRun.hs
Eleven/: PlutonianPebbles.hs
Fifteen/: WarehouseWoes.hs
Five/: PrintQueue.hs
Four/: CeresSearch.hs  Four.hs
Fourteen/: RestroomRedoubt.hs
Nine/: DiskFragmenter.hs
Nineteen/: LinenLayout.hs
One/: HistorianHysteria.hs
Seven/: BridgeRepair.hs
Seventeen/: ChronospatialComputer.hs
Six/: GuardGallivant.hs
Sixteen/: ReindeerMaze.hs
Ten/: HoofIt.hs
Thirdteen/: ClawContraption.hs
Three/: MultItOver.hs
Twelve/: GardenGroups.hs
Twenty/: RaceCondition.hs
Twentyfive/: CodeChronicle.hs
Twentyfour/: CrossedWires.hs
Twentyone/: KeypadConundrum.hs
Twentythree/: LANParty.hs
Twentytwo/: MonkeyMarket.hs
Two/: RedNosedReports.hs
