cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

common optimizations
    ghc-options: -O2
                 -fspecialise-aggressively
                 -fexpose-all-unfoldings
                 -funbox-strict-fields
                 -threaded
                 -rtsopts
                 -with-rtsopts=-N12

common deps
    build-depends:    base ^>=4.18
                    , text
                    , parallel
                    , split
                    , containers
                    , vector
                    , array
                    , megaparsec
                    , mtl
                    , psqueues
                    , search-algorithms
                    , fgl
                    , unordered-containers
                    , hashable
                    , algebraic-graphs
                    , linear
                    , deepseq

executable HistorianHysteria
    import: warnings, optimizations, deps
    main-is: One/HistorianHysteria.hs
    hs-source-dirs: .
    ghc-options: -main-is One.HistorianHysteria
    default-language: GHC2021

executable RedNosedReports
    import: warnings, optimizations, deps
    main-is: Two/RedNosedReports.hs
    hs-source-dirs: .
    ghc-options: -main-is Two.RedNosedReports
    default-language: GHC2021

executable MultItOver
    import: warnings, optimizations, deps
    main-is: Three/MultItOver.hs
    hs-source-dirs: .
    ghc-options: -main-is Three.MultItOver
    default-language: GHC2021

executable CeresSearch
    import: warnings, optimizations, deps
    main-is: Four/CeresSearch.hs
    hs-source-dirs: .
    ghc-options: -main-is Four.CeresSearch
    default-language: GHC2021

executable PrintQueue
    import: warnings, optimizations, deps
    main-is: Five/PrintQueue.hs
    hs-source-dirs: .
    ghc-options: -main-is Five.PrintQueue
    default-language: GHC2021

executable GuardGallivant
    import: warnings, optimizations, deps
    main-is: Six/GuardGallivant.hs
    hs-source-dirs: .
    ghc-options: -main-is Six.GuardGallivant
    default-language: GHC2021

executable BridgeRepair
    import: warnings, optimizations, deps
    main-is: Seven/BridgeRepair.hs
    hs-source-dirs: .
    ghc-options: -main-is Seven.BridgeRepair
    default-language: GHC2021
    
executable ResonantCollinearity
    import: warnings, optimizations, deps
    main-is: Eight/ResonantCollinearity.hs
    hs-source-dirs: .
    ghc-options: -main-is Eight.ResonantCollinearity
    default-language: GHC2021
    
executable DiskFragmenter
    import: warnings, optimizations, deps
    main-is: Nine/DiskFragmenter.hs
    hs-source-dirs: .
    ghc-options: -main-is Nine.DiskFragmenter
    default-language: GHC2021

executable HoofIt
    import: warnings, optimizations, deps
    main-is: Ten/HoofIt.hs
    hs-source-dirs: .
    ghc-options: -main-is Ten.HoofIt
    default-language: GHC2021

executable PlutonianPebbles
    import: warnings, optimizations, deps
    main-is: Eleven/PlutonianPebbles.hs
    hs-source-dirs: .
    ghc-options: -main-is Eleven.PlutonianPebbles
    default-language: GHC2021
