cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple
                    
common warnings
    ghc-options: -Wall

common optimizations
    ghc-options: -O2
                 -threaded
                 -rtsopts
                 -with-rtsopts=-N12
                 -funbox-strict-fields
                 -fspecialise-aggressively
                 -mbmi2
                 -mavx2
                 -msse4.2
                 
common deps
    build-depends:    base ^>=4.18
                    , text
                    , parallel
                    , split
                    , containers
                    , vector
                    , array
                    , megaparsec
                    , mtl
                    , PSQueue
                    , search-algorithms
                    , fgl
                    , unordered-containers
                    , hashable
                    , algebraic-graphs
                    , linear
                    , deepseq
                    , sbv
                    , heap

executable HistorianHysteria
    import: warnings, optimizations, deps
    main-is: One/HistorianHysteria.hs
    hs-source-dirs: .
    ghc-options: -main-is One.HistorianHysteria
    default-language: GHC2021

executable RedNosedReports
    import: warnings, optimizations, deps
    main-is: Two/RedNosedReports.hs
    hs-source-dirs: .
    ghc-options: -main-is Two.RedNosedReports
    default-language: GHC2021

executable MultItOver
    import: warnings, optimizations, deps
    main-is: Three/MultItOver.hs
    hs-source-dirs: .
    ghc-options: -main-is Three.MultItOver
    default-language: GHC2021

executable CeresSearch
    import: warnings, optimizations, deps
    main-is: Four/CeresSearch.hs
    hs-source-dirs: .
    ghc-options: -main-is Four.CeresSearch
    default-language: GHC2021

executable PrintQueue
    import: warnings, optimizations, deps
    main-is: Five/PrintQueue.hs
    hs-source-dirs: .
    ghc-options: -main-is Five.PrintQueue
    default-language: GHC2021

executable GuardGallivant
    import: warnings, optimizations, deps
    main-is: Six/GuardGallivant.hs
    hs-source-dirs: .
    ghc-options: -main-is Six.GuardGallivant
    default-language: GHC2021

executable BridgeRepair
    import: warnings, optimizations, deps
    main-is: Seven/BridgeRepair.hs
    hs-source-dirs: .
    ghc-options: -main-is Seven.BridgeRepair
    default-language: GHC2021
    
executable ResonantCollinearity
    import: warnings, optimizations, deps
    main-is: Eight/ResonantCollinearity.hs
    hs-source-dirs: .
    ghc-options: -main-is Eight.ResonantCollinearity
    default-language: GHC2021
    
executable DiskFragmenter
    import: warnings, optimizations, deps
    main-is: Nine/DiskFragmenter.hs
    hs-source-dirs: .
    ghc-options: -main-is Nine.DiskFragmenter
    default-language: GHC2021

executable HoofIt
    import: warnings, optimizations, deps
    main-is: Ten/HoofIt.hs
    hs-source-dirs: .
    ghc-options: -main-is Ten.HoofIt
    default-language: GHC2021

executable PlutonianPebbles
    import: warnings, optimizations, deps
    main-is: Eleven/PlutonianPebbles.hs
    hs-source-dirs: .
    ghc-options: -main-is Eleven.PlutonianPebbles
    default-language: GHC2021

executable GardenGroups
    import: warnings, optimizations, deps
    main-is: Twelve/GardenGroups.hs
    hs-source-dirs: .
    ghc-options: -main-is Twelve.GardenGroups
    default-language: GHC2021

executable ClawContraption
    import: warnings, optimizations, deps
    main-is: Thirdteen/ClawContraption.hs
    hs-source-dirs: .
    ghc-options: -main-is Thirdteen.ClawContraption
    default-language: GHC2021
    
executable RestroomRedoubt
    import: warnings, optimizations, deps
    main-is: Fourteen/RestroomRedoubt.hs
    hs-source-dirs: .
    ghc-options: -main-is Fourteen.RestroomRedoubt
    default-language: GHC2021

executable WarehouseWoes
    import: warnings, optimizations, deps
    main-is: Fifteen/WarehouseWoes.hs
    hs-source-dirs: .
    ghc-options: -main-is Fifteen.WarehouseWoes
    default-language: GHC2021

executable ReindeerMaze
    import: warnings, optimizations, deps
    main-is: Sixteen/ReindeerMaze.hs
    hs-source-dirs: .
    ghc-options: -main-is Sixteen.ReindeerMaze
    default-language: GHC2021

executable ChronospatialComputer
    import: warnings, optimizations, deps
    main-is: Seventeen/ChronospatialComputer.hs
    hs-source-dirs: .
    ghc-options: -main-is Seventeen.ChronospatialComputer
    default-language: GHC2021

executable RAMRun
    import: warnings, optimizations, deps
    main-is: Eighteen/RAMRun.hs
    hs-source-dirs: .
    ghc-options: -main-is Eighteen.RAMRun
    default-language: GHC2021

executable LinenLayout
    import: warnings, optimizations, deps
    main-is: Nineteen/LinenLayout.hs
    hs-source-dirs: .
    ghc-options: -main-is Nineteen.LinenLayout
    default-language: GHC2021

executable RaceCondition
    import: warnings, optimizations, deps
    main-is: Twenty/RaceCondition.hs
    hs-source-dirs: .
    ghc-options: -main-is Twenty.RaceCondition
    default-language: GHC2021

executable KeypadConundrum
    import: warnings, optimizations, deps
    main-is: Twentyone/KeypadConundrum.hs
    hs-source-dirs: .
    ghc-options: -main-is Twentyone.KeypadConundrum
    default-language: GHC2021

executable MonkeyMarket
    import: warnings, optimizations, deps
    main-is: Twentytwo/MonkeyMarket.hs
    hs-source-dirs: .
    ghc-options: -main-is Twentytwo.MonkeyMarket
    default-language: GHC2021

executable LANParty
    import: warnings, optimizations, deps
    main-is: Twentythree/LANParty.hs
    hs-source-dirs: .
    ghc-options: -main-is Twentythree.LANParty
    default-language: GHC2021
